# COE201

./: README.md
hw/COE201_Assignment2/: p1_modern_components.py  p2_kv_cache.py  p3_minigpt.py  pyproject.toml
hw/lab_assignment1_code/: p1_numpy_ops.py  p2_grad_reversal.py  p3_softmax_topk.py  pyproject.toml
lab1/lab1/: lab1_benchmark.py  lab1_env_check.py  lab1_math.py  pyproject.toml
lab1/lab1_answers/: lab1_benchmark.py  lab1_math.py
lab2/lab2/: lab2_manual_gd.py  lab2_mnist_mlp.py  lab2_opt1_custom_autograd.py  lab2_opt2_poly_regression.py  pyproject.toml
lab3/lab3/: pyproject.toml  task1_embeddings.py  task2_tokenization.py  task3_softmax.py  task4_beam_search.py
lab4/lab4/: lab4_gru.py  lab4_rnn.py  lab4_warmup.py  pyproject.toml
lab5-transformer1/lab5/: lab5_gqa.py  lab5_mha.py  lab5_sdpa.py  pyproject.toml
lab6/: lab6_decoder.py  lab6_encoder.py  lab6_slow_rope.py  lab6_transformer.py  pyproject.toml
lab7/lab7/: lab7_hf_chatbot.py  lab7_metrics.py  lab7_model_inference.py  mini_benchmark.json  pyproject.toml
lab8/lab0/: gpu_check.py
lab8/lab8/: lab8_bonus_softmax.py  lab8_vector_add.py  pyproject.toml
lab9/lab9/: lab9_chatbot.py  lab9_lora_layer.py  lab9_merge_lora.py  lab9_sft_finetune.py  pyproject.toml
