[project]
name = "coe201-assignment1"
version = "0.1.0"
description = "COE201 Assignment 1: Labs 1-3 Coding Problems"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "torch>=2.0.0",
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
    "torchvision>=0.15.0",
]

[[tool.uv.index]]
url = "https://mirrors.sustech.edu.cn/pypi/web/simple"
default = true
