[project]
name = "coe201-lab1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11, <3.12"
dependencies = [
    "numpy>=2.0.0",
    "torch>=2.0.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
url = "https://mirrors.sustech.edu.cn/pypi/web/simple"
default = true

# [[tool.uv.index]]
# name = "pytorch-cu117"
# url = "https://mirrors.nju.edu.cn/pytorch/whl/cu117"
# explicit = true


[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true
