[project]
name = "lab3"
version = "0.1.0"
description = "Lab 3: Preprocessing and Output Layers"
authors = [
    {name = "COE201", email = "coe201@sustech.edu.cn"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "gensim>=4.0.0"
]
requires-python = ">=3.10"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
